# bt_api_hitbtc

./: README.md  mkdocs.yml  pyproject.toml
docs/: index.md
src/bt_api_hitbtc/: __init__.py  plugin.py  registry_registration.py
src/bt_api_hitbtc/errors/: __init__.py  hitbtc_translator.py
src/bt_api_hitbtc/exchange_data/: __init__.py
src/bt_api_hitbtc/feeds/live_hitbtc/: request_base.py  spot.py
src/bt_api_hitbtc/tickers/: __init__.py  hitbtc_ticker.py
tests/: test_hitbtc_integration.py
tests/containers/exchanges/: test_hitbtc_exchange_data.py
tests/containers/tickers/: test_hitbtc_ticker.py
tests/errors/: test_error_framework_hitbtc.py
tests/exchange_registers/: test_register_hitbtc.py
tests/feeds/: test_hitbtc_request_base.py
