[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "bt_api_hitbtc"
version = "0.1.0"
description = "HitBTC exchange plugin for bt_api"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [{ name = "cloudQuant", email = "yunjinqi@gmail.com" }]
keywords = ["bt_api", "hitbtc", "exchange", "trading"]
dependencies = ["bt_api_base>=0.1.0"]

[project.urls]
Homepage = "https://github.com/cloudQuant/bt_api"
Documentation = "https://cloudquant.github.io/bt_api/"

[tool.hatch.build.targets.sdist]
include = ["src/"]

[tool.hatch.build.targets.wheel]
packages = ["src/bt_api_hitbtc"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["I", "UP", "E", "F", "W", "TC"]
ignore = ["TC002"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/**" = ["I001", "UP037"]
